# SiGtRiP

./: .env.example  .env.orangepi  .gitignore  Argos.modelfile  CHANGELOG.md  Dockerfile  INSTALL.md  README.md  README_HEADER_V2.md  RELEASE_CHECKLIST.md  __init__.py  build.py  buildozer.spec  buildozer_local.spec  bump_version.py  check_all_patches.py  colab_start.sh  docker-compose.ollama.yml  docker-compose.yml  dreamer.py  job-d6k5cgsgmsgc73bvse0g-info.json  launch.sh  main.py  main_argos_local.py  main_kivy.py  p4a_hook.py  pyproject.toml  pytest.ini  quickstart.md  requirements-optional.txt  requirements.txt  requirements_android.txt  setup.cfg  setup_android_files.py  status_report.py  telegram_bot.py  validate_project.py
.github/workflows/: android-apk.yml  argos_report_to_gist.yml  auto_push.yml  build_apk.yml  build_apk_client.yml  build_windows.yml  ci.yml  docker.yml  docker_arm64.yml  publish_pypi.yml  publish_testpypi.yml  release.yml  status_report.yml
apps/argoss/: .env.example  CHANGELOG.md  Dockerfile  QUICKSTART_V2.md  README.md  README_HEADER_V2.md  RELEASE_CHECKLIST.md  REPORT.md  __init__.py  argos.spec  argos_colab.ipynb  build.py  buildozer.spec  bump_version.py  colab_start.sh  fix_encoding.py  main.py  main_kivy.py  p4a_hook.py  pyproject.toml  requirements.txt  setup_android_files.py  validate_project.py  whisper_node.py
assets/: Argos.modelfile  Argos_Extreme.modelfile  argos.manifest
colab/: ARGOS_Colab_Launch.ipynb
config/: scheduled_tasks.json
config/master_prompts/: identity.md
data/: lazarus_shard.tar.gz.enc  memory.db-shm  memory.db-wal
docs/: CHANGELOG.md  REPORT.md  github-mcp-server-cheatsheet.md  mkdocs.yml
notebooks/: argos_colab.ipynb
res/xml/: file_paths.xml
scripts/: colab_start.sh  pack_archive.py
src/: admin.py  ai_failover.py  ai_router.py  awa_core.py  awareness.py  consciousness.py  context_engine.py  context_manager.py  core.py  curiosity.py  db_init.py  device_scanner.py  full_audit.py  hardware_guard.py  health_monitor.py  memory.py  multi_model.py  observability.py  ollama_autoselect.py  ollama_three.py  psutil_android.py  self_sustain.py  thought_book.py  tool_calling.py
tests/: conftest.py  test_colibri_daemon.py  test_crypto_monitor.py  test_gui_resilience.py  test_industrial_protocols.py  test_telegram_auth.py  test_telegram_bot_voice.py  test_telegram_can_start.py
(+109 files in other folders)
