[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argos-universalsigtrip"
version = "2.1.0"
description = "ARGOS — децентрализованная автономная ИИ-система"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.scripts]
argos = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.build_ext]
# Ensure Cython sources are compiled with Python 3 semantics.
define = ["CYTHON_LANGUAGE_LEVEL=3"]
