[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argos-universalsigtrip"
version = "2.1.3"
description = "ARGOS — децентрализованная автономная ИИ-система"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.scripts]
argos = "main:main"

[tool.setuptools]
py-modules = ["main"]
# Disable license-file metadata to avoid unsupported 'license-file' field in TestPyPI uploads
license-files = []

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
